# Custom_data_Link_layer

./: CMakeLists.txt
apps/: communicatorA.cpp  communicatorB.cpp
include/: BufferReader.hpp  BufferWriter.hpp  ByteStuffer.hpp  DataLinkLayer.hpp  Frame.hpp  ProtocolTyes.hpp  SerialPort.hpp
src/: ByteStuffer.cpp  DataLinkLayer.cpp  Frame.cpp  SerialPort.cpp
